@startuml Diagrama de Clases - Sistema Detector de Mutantes

title Diagrama de Clases - API REST Detector de Mutantes

skinparam classAttributeIconSize 0

' ========== CAPA: MAIN APPLICATION ==========
class ExamenMercado3K9Application {
  + {static} main(args: String[]): void
}

' ========== CAPA: CONTROLLER ==========
class MutantController {
  - mutantService: MutantService
  - statsService: StatsService
  --
  + checkMutant(request: DnaRequest): ResponseEntity<Void>
  + getStats(): ResponseEntity<StatsResponse>
}

' ========== CAPA: SERVICE ==========
class MutantService {
  - mutantDetector: MutantDetector
  - dnaRecordRepository: DnaRecordRepository
  --
  + analyzeDna(dna: String[]): boolean
  - calculateDnaHash(dna: String[]): String
}

class MutantDetector {
  - {static} SEQUENCE_LENGTH: int
  - {static} VALID_BASES: Set<Character>
  --
  + isMutant(dna: String[]): boolean
  - isValidDna(dna: String[]): boolean
  - checkHorizontal(matrix: char[][], row: int, col: int): boolean
  - checkVertical(matrix: char[][], row: int, col: int): boolean
  - checkDiagonalDescending(matrix: char[][], row: int, col: int): boolean
  - checkDiagonalAscending(matrix: char[][], row: int, col: int): boolean
}

class StatsService {
  - dnaRecordRepository: DnaRecordRepository
  --
  + getStats(): StatsResponse
  - calculateRatio(countMutant: long, countHuman: long): double
}

' ========== CAPA: REPOSITORY ==========
interface DnaRecordRepository {
  + findByDnaHash(dnaHash: String): Optional<DnaRecord>
  + countByIsMutant(isMutant: boolean): long
  + save(entity: DnaRecord): DnaRecord
  + findAll(): List<DnaRecord>
}

interface JpaRepository<T,ID> {
  + save(entity: T): T
  + findById(id: ID): Optional<T>
  + findAll(): List<T>
  + delete(entity: T): void
  + count(): long
}

' ========== CAPA: ENTITY ==========
class DnaRecord {
  - id: Long
  - dnaHash: String
  - isMutant: boolean
  - createdAt: LocalDateTime
  --
  + DnaRecord()
  + DnaRecord(dnaHash: String, isMutant: boolean)
  --
  «property get»
  + getId(): Long
  + getDnaHash(): String
  + isMutant(): boolean
  + getCreatedAt(): LocalDateTime
  --
  «property set»
  + setId(id: Long): void
  + setDnaHash(dnaHash: String): void
  + setMutant(isMutant: boolean): void
  + setCreatedAt(createdAt: LocalDateTime): void
}

' ========== CAPA: DTO ==========
class DnaRequest {
  - dna: String[]
  --
  + DnaRequest()
  + DnaRequest(dna: String[])
  --
  «property get»
  + getDna(): String[]
  --
  «property set»
  + setDna(dna: String[]): void
}

class StatsResponse {
  - count_mutant_dna: long
  - count_human_dna: long
  - ratio: double
  --
  + StatsResponse()
  + StatsResponse(countMutant: long, countHuman: long, ratio: double)
  --
  «property get»
  + getCount_mutant_dna(): long
  + getCount_human_dna(): long
  + getRatio(): double
  --
  «property set»
  + setCount_mutant_dna(count: long): void
  + setCount_human_dna(count: long): void
  + setRatio(ratio: double): void
}

class ErrorResponse {
  - timestamp: LocalDateTime
  - status: int
  - error: String
  - message: String
  - path: String
  --
  + ErrorResponse()
  + ErrorResponse(timestamp: LocalDateTime, status: int, error: String, message: String, path: String)
  --
  «property get»
  + getTimestamp(): LocalDateTime
  + getStatus(): int
  + getError(): String
  + getMessage(): String
  + getPath(): String
  --
  «property set»
  + setTimestamp(timestamp: LocalDateTime): void
  + setStatus(status: int): void
  + setError(error: String): void
  + setMessage(message: String): void
  + setPath(path: String): void
}

' ========== CAPA: VALIDATION ==========
annotation ValidDnaSequence {
  + message(): String
  + groups(): Class<?>[]
  + payload(): Class<? extends Payload>[]
}

class ValidDnaSequenceValidator {
  - {static} DNA_PATTERN: Pattern
  - {static} MIN_SIZE: int
  --
  + initialize(constraintAnnotation: ValidDnaSequence): void
  + isValid(dna: String[], context: ConstraintValidatorContext): boolean
}

interface ConstraintValidator<A,T> {
  + initialize(constraintAnnotation: A): void
  + isValid(value: T, context: ConstraintValidatorContext): boolean
}

' ========== CAPA: EXCEPTION ==========
class GlobalExceptionHandler {
  + handleValidationErrors(ex: MethodArgumentNotValidException, request: HttpServletRequest): ResponseEntity<ErrorResponse>
  + handleDnaHashCalculationException(ex: DnaHashCalculationException, request: HttpServletRequest): ResponseEntity<ErrorResponse>
  + handleGeneralException(ex: Exception, request: HttpServletRequest): ResponseEntity<ErrorResponse>
}

class DnaHashCalculationException {
  + DnaHashCalculationException(message: String, cause: Throwable)
}

class RuntimeException {
  + RuntimeException(message: String)
  + RuntimeException(message: String, cause: Throwable)
}

' ========== CAPA: CONFIG ==========
class SwaggerConfig {
  + customOpenAPI(): OpenAPI
}

' ========== ENUMERACIONES / CONSTANTES ==========
note right of MutantDetector
  **Constantes:**
  SEQUENCE_LENGTH = 4
  VALID_BASES = {'A', 'T', 'C', 'G'}

  **Algoritmo:**
  - Busca en 4 direcciones
  - Early Termination (>1 secuencia)
  - Complejidad: O(N²)
end note

note right of DnaRecord
  **Anotaciones JPA:**
  @Entity
  @Table(name = "dna_records")
  @Id @GeneratedValue

  **Índices:**
  @Index(name = "idx_dna_hash")
  @Index(name = "idx_is_mutant")
end note

note left of MutantController
  **Anotaciones Spring:**
  @RestController
  @RequiredArgsConstructor
  @Slf4j
  @Tag(name = "Mutant Detector API")

  **Endpoints:**
  POST /mutant → 200/403/400
  GET /stats → 200
end note

' ========== RELACIONES ==========

' Application
ExamenMercado3K9Application ..> MutantController : <<bootstrap>>

' Controller -> Service
MutantController "1" --> "1" MutantService : uses
MutantController "1" --> "1" StatsService : uses

' Controller -> DTO
MutantController ..> DnaRequest : <<receives>>
MutantController ..> StatsResponse : <<returns>>

' Service -> Service/Repository
MutantService "1" --> "1" MutantDetector : uses
MutantService "1" --> "1" DnaRecordRepository : uses
StatsService "1" --> "1" DnaRecordRepository : uses

' Service -> Entity
MutantService ..> DnaRecord : <<creates>>

' Service -> Exception
MutantService ..> DnaHashCalculationException : <<throws>>

' Repository -> Entity
DnaRecordRepository "1" --> "*" DnaRecord : manages
DnaRecordRepository --|> JpaRepository

' Validation
ValidDnaSequenceValidator ..|> ConstraintValidator : <<implements>>
ValidDnaSequence ..> ValidDnaSequenceValidator : validated by
DnaRequest --> ValidDnaSequence : @ValidDnaSequence

' Exception Handler -> DTO
GlobalExceptionHandler ..> ErrorResponse : <<creates>>
GlobalExceptionHandler ..> DnaHashCalculationException : <<handles>>
DnaHashCalculationException --|> RuntimeException

' Config
SwaggerConfig ..> MutantController : <<configures>>

@enduml